fixes .more/footer gap on small screens

--- a/src/styles/recipe.css
+++ b/src/styles/recipe.css
@@ -217,6 +217,7 @@ gc-recipe {
   }
 
   .more:last-child {
+    margin-block-end: 0;
     padding-block-end: var(--gap);
   }
 
